# git-hook-python

./: README.md  pre-push
version-enforcer/: enforce.py  pyproject.toml
