[tool.poetry]
name = "version-enforcer"
version = "0.1.0"
description = "Check that the version set in the openapi spec matches the metadata version"
authors = ["mperezi <mperezibars@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
PyYAML = "^5.3.1"
colorama = "^0.4.4"
simple-term-menu = "^0.10.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
